--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="index-body-button">
         <div class="index-body-button-item">
-            <a href="list.html?type=company">
+            <a href="company.html">
                 <img src="images/index/company.png">
             </a>
         </div>
