视频播放页面修改

--- a/company.html
+++ b/company.html
@@ -21,6 +21,16 @@
 <div class="list-line"></div>
 <div class="list-body">
     <div class="company-left-image"></div>
+    <div class="company-right">
+        <h2>一</h2>
+        <h2>正基-电气联接技术产品制造商</h2>
+        <div class="company-right-content">
+            中国正基电气有限公司始创于2003年，<b>是一家专业研发、生产电气联接技术产品的领先制造商。</b>公司拥有世界一流的（自制研发）制造设备和工艺水平，<b>以保证安全的用电，</b>在电气联接技术行业中遥遥领先，公司顺利通过丨S09001国际管理体系认证。
+主营产品：接线端子及电控附件，通过CE、CQC、RoHs等权威认证。公司是国内外众多知名企业的优质供应商及战略合作伙伴，产品广泛运用在电力行业、自动化行业、机械行业、通迅行业、交通行业。正基始终以先进的科技作为发展之本，坚持不断变革和创新，开发和生产面向全球客户的全系列电联接技术产品和解决方案。本着“智慧成就梦想”的理念。
+
+<br /><b>正基电气正以忠诚、敬业、创新、高效的精神，向客户提供卓越的产品和优质的服务。</b>
+        </div>
+    </div>
     <div class="clear"></div>
 </div>
 <div class="list-line"></div>
