--- a/video.html
+++ b/video.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/video-js.css">
     <link rel="stylesheet" href="styles/video.css">
+    <script type="text/javascript">
+      window.$ = window.jQuery = require('./scripts/jquery.js');
+    </script>
     <script src="scripts/vendor/modernizr.js"></script>
 </head>
 <body>
+<div class="list-header">
+    <div class="list-header-inner"></div>
+</div>
 <video id="my-video" class="video-js" controls preload="auto" width="100%" height="100%"
        poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
     <source src="/file/video/2.mp4" type='video/mp4'>
@@ -21,6 +27,11 @@
     </p>
 </video>
 
+    <a href="javascript:history.back(-1)">
+        <div class="video-footer-return">
+            <img src="images/list/button_return.png" />
+        </div>
+    </a>
 <script src="scripts/vendor.js"></script>
 <script src="scripts/plugins.js"></script>
 <script src="scripts/main.js"></script>
