--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             </a>
         </div>
         <div class="index-body-button-item">
-            <a href="list.html?type=pdf_list">
+            <a href="list.html?type=product">
                 <img src="images/index/product.png">
             </a>
         </div>
         <div class="index-body-button-item">
-            <a href="list.html?type=video">
+            <a href="contact.html">
                 <img src="images/index/contact.png">
             </a>
         </div>
