--- a/pdf.html
+++ b/pdf.html
@@ -15,6 +15,11 @@
 <body>
 <iframe id="my-iframe" src="" width="100%" height="100%">
 </iframe>
+<a href="javascript:history.back(-1)">
+    <div class="video-footer-return">
+        <img src="images/list/button_return.png" />
+    </div>
+</a>
 <script src="scripts/vendor.js"></script>
 <script src="scripts/plugins.js"></script>
 <script src="scripts/main.js"></script>
