--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
     <div class="list-header-inner"></div>
 </div>
 <video id="my-video" class="video-js" controls preload="auto" width="100%" height="100%"
-       poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
+       poster="MY_VIDEO_POSTER.jpg" data-setup="{}" autoplay="true">
     <source src="/file/video/2.mp4" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
