--- a/video.html
+++ b/video.html
@@ -15,9 +15,9 @@
     <script src="scripts/vendor/modernizr.js"></script>
 </head>
 <body>
-<div class="list-header">
+<!-- <div class="list-header">
     <div class="list-header-inner"></div>
-</div>
+</div> -->
 <video id="my-video" class="video-js" controls preload="auto" width="100%" height="100%"
        poster="MY_VIDEO_POSTER.jpg" data-setup="{}" autoplay="true">
     <source src="/file/video/2.mp4" type='video/mp4'>
