--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="index-body-button-item">
-            <a href="video.html?src=file/video/2.m3u8">
+            <a href="video.html?src=file/video/test.m3u8">
                 <img src="images/index/video.png">
             </a>
         </div>
